--- a/build.conf
+++ b/build.conf
@@ -5,7 +5,7 @@
 # some-other-patch patch2 patch3
 # "
 # NO NEED TO PUT MICROG PATCHES IN THIS LIST. IT IS HANDLED BY THE MODE CONFIGURATION BELOW
-YOUTUBE_EXCLUDED_PATCHES="hide-create-button"
+YOUTUBE_EXCLUDED_PATCHES="swipe-controls seekbar-tapping downloads return-youtube-dislike premium-heading custom-branding always-autorepeat"
 MUSIC_EXCLUDED_PATCHES=""
 
 # MODE: build-mode/version
@@ -13,12 +13,12 @@ MUSIC_EXCLUDED_PATCHES=""
 # examples: module/auto, both/17.40.41, apk/latest, module/17.36.42, apk/auto, none/none
 # 'auto' = selects according to the latest revanced-patches supported version
 # 'latest' = always latest
-YOUTUBE_MODE=both/auto
-MUSIC_ARM64_V8A_MODE=both/auto
-MUSIC_ARM_V7A_MODE=both/auto
+YOUTUBE_MODE=module/auto
+MUSIC_ARM64_V8A_MODE=none/auto
+MUSIC_ARM_V7A_MODE=none/auto
 TWITTER_MODE=apk/latest
-REDDIT_MODE=apk/latest
-TIKTOK_MODE=apk/latest
+REDDIT_MODE=none/latest
+TIKTOK_MODE=none/latest
 SPOTIFY_MODE=apk/latest
 
 WARN_WETTER_MODE=none/latest
