--- a/build.conf
+++ b/build.conf
@@ -6,8 +6,8 @@
 # some-other-patch patch2 patch3
 # "
 # DO NOT PUT MICROG PATCHES IN ANY OF THESE LISTS. IT IS HANDLED BY THE MODE CONFIGURATION BELOW
-YOUTUBE_EXCLUDED_PATCHES=""
-YOUTUBE_INCLUDED_PATCHES="theme"
+YOUTUBE_EXCLUDED_PATCHES="swipe-controls seekbar-tapping downloads return-youtube-dislike premium-heading custom-branding always-autorepeat"
+YOUTUBE_INCLUDED_PATCHES="theme hide-create-button"
 MUSIC_EXCLUDED_PATCHES=""
 MUSIC_INCLUDED_PATCHES=""
 
@@ -16,13 +16,13 @@ MUSIC_INCLUDED_PATCHES=""
 # examples: module/auto, both/17.40.41, apk/latest, module/17.36.42, apk/auto, none/none
 # 'auto' = selects according to the latest revanced-patches supported version
 # 'latest' = always latest
-YOUTUBE_MODE=both/auto
-MUSIC_ARM64_V8A_MODE=both/auto
-MUSIC_ARM_V7A_MODE=both/auto
+YOUTUBE_MODE=module/auto
+MUSIC_ARM64_V8A_MODE=none/auto
+MUSIC_ARM_V7A_MODE=none/auto
 TWITTER_MODE=apk/latest
-REDDIT_MODE=apk/latest
-TWITCH_MODE=apk/latest
-TIKTOK_MODE=apk/27.0.3
+REDDIT_MODE=none/latest
+TWITCH_MODE=none/latest
+TIKTOK_MODE=none/latest
 
 SPOTIFY_MODE=none/latest # patches for spotify are quite useless tbh
 TICKTICK_MODE=none/latest
