--- a/build.conf
+++ b/build.conf
@@ -20,15 +20,15 @@ YOUTUBE_MODE=module/auto
 MUSIC_ARM64_V8A_MODE=none/auto
 MUSIC_ARM_V7A_MODE=none/auto
 TWITTER_MODE=apk/latest
-REDDIT_MODE=none/latest
-TWITCH_MODE=none/latest
-TIKTOK_MODE=none/latest
+REDDIT_MODE=apk/latest
+TWITCH_MODE=apk/latest
+TIKTOK_MODE=apk/latest
 
 SPOTIFY_MODE=none/latest # patches for spotify are quite useless tbh
-TICKTICK_MODE=none/latest
-WARN_WETTER_MODE=none/latest
-BACKDROPS_MODE=none/latest
-WINDY_MODE=none/latest
+TICKTICK_MODE=apk/latest
+WARN_WETTER_MODE=apk/latest
+BACKDROPS_MODE=apk/latest
+WINDY_MODE=apk/latest
 
 MOUNT_DELAY=5             # some low-end phones cannot mount apks on boot without a delay. increase to something like 20 if needed.
 COMPRESSION_LEVEL=9       # compression level for module zips. between 1 and 9
