--- a/build.conf
+++ b/build.conf
@@ -22,7 +22,7 @@ MUSIC_ARM_V7A_MODE=none/auto
 TWITTER_MODE=apk/latest
 REDDIT_MODE=none/latest
 TWITCH_MODE=apk/latest
-TIKTOK_MODE=none/27.2.5
+TIKTOK_MODE=apk/27.2.5
 
 SPOTIFY_MODE=none/latest
 TICKTICK_MODE=none/latest
