--- a/config.toml
+++ b/config.toml
@@ -9,9 +9,9 @@ build-mindetach-module = true
 
 [YouTube]
 enabled = true                                                        # add 'enabled = false' key to entries to not build them
-build-mode = "both"                                                   # 'both', 'apk' or 'module'
-excluded-patches = "debugging"                                        # whitespace seperated list of patches to exclude (multiline strings are not supported)
-included-patches = ""                                                 # whitespace seperated list of patches to include
+build-mode = "module"                                                   # 'both', 'apk' or 'module'
+excluded-patches = "debugging swipe-controls seekbar-tapping downloads return-youtube-dislike premium-heading custom-branding always-autorepeat"                                        # whitespace seperated list of patches to exclude (multiline strings are not supported)
+included-patches = "hide-create-button hide-cast-button"                                                 # whitespace seperated list of patches to include
 version = "auto"                                                      # 'auto', 'latest' or a custom one like '17.40.41'
 exclusive-patches = false                                             # excludes all patches by default
 microg-patch = "microg-support"
@@ -20,6 +20,7 @@ module-prop-name = "ytrv-magisk"
 merge-integrations = true
 
 [Music-arm64]
+enabled = false
 build-mode = "both"
 app-name = "Music"
 excluded-patches = ""
@@ -31,6 +32,7 @@ module-prop-name = "ytmusicrv-magisk"
 arch = "arm64-v8a"
 
 [Music-arm]
+enabled = false
 build-mode = "both"
 app-name = "Music"
 excluded-patches = ""
@@ -48,6 +50,7 @@ version = "latest"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/twitter-inc/twitter/"
 
 [Reddit]
+enabled = false
 build-mode = "apk"
 version = "latest"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
