--- a/config.toml
+++ b/config.toml
@@ -5,18 +5,18 @@ enable-magisk-update = true # set this to false if you do not want to receive up
 parallel-jobs = 1 # max number of concurrent building jobs
 build-mindetach-module = true
 
-# add 'enabled = false' for not patching a specific app
 [YouTube]
 enabled = true
-build-mode = "both" # 'both', 'apk' or 'module'
-excluded-patches = "debugging" # whitespace seperated list of patches to exclude (multiline strings are not supported)
-included-patches = "" # whitespace seperated list of patches to include
+build-mode = "module" # 'both', 'apk' or 'module'
+excluded-patches = "debugging swipe-controls seekbar-tapping downloads return-youtube-dislike premium-heading custom-branding always-autorepeat" # whitespace seperated list of patches to exclude (multiline strings are not supported)
+included-patches = "hide-create-button hide-cast-button" # whitespace seperated list of patches to include
 version = "auto" # 'auto', 'latest' or a custom one like '17.40.41'
 exclusive-patches = false # excludes all patches by default
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 module-prop-name = "ytrv-magisk"
 
 [Music-arm64]
+enabled = false
 build-mode = "both"
 app-name = "Music"
 excluded-patches = ""
@@ -27,6 +27,7 @@ module-prop-name = "ytmusicrv-magisk"
 arch = "arm64-v8a"
 
 [Music-arm]
+enabled = false
 build-mode = "both"
 app-name = "Music"
 excluded-patches = ""
@@ -43,7 +44,62 @@ version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/twitter-inc/twitter/"
 
 [Reddit]
+enabled = false
 build-mode = "apk"
+version = "auto"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
+
+[Twitch]
+build-mode = "apk"
+version = "auto"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/twitch-interactive-inc/twitch/"
+
+[TikTok]
+version = "auto"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
+
+[Spotify]
+enabled = false
+build-mode = "apk"
+version = "auto"
+uptodown-dlurl = "https://spotify.en.uptodown.com/android"
+
+[Citra]
+enabled = false
+apkmirror-dlurl = "https://www.apkmirror.com/apk/citra-emulator/citra-emulator/"
+
+[Backdrops]
+enabled = false
+apkmirror-dlurl = "https://www.apkmirror.com/apk/backdrops/backdrops-wallpapers/"
+
+[WarnWetter]
+enabled = false
+apkmirror-dlurl = "https://www.apkmirror.com/apk/deutscher-wetterdienst/warnwetter/"
+
+[Windyapp]
+enabled = false
+apkmirror-dlurl = "https://www.apkmirror.com/apk/windy-weather-world-inc/windy-wind-weather-forecast/"
+
+[MyExpenses]
+enabled = false
+uptodown-dlurl = "https://my-expenses.en.uptodown.com/android"
+
+[NyxMusicPlayer]
+enabled = false
+apkmirror-dlurl = "https://www.apkmirror.com/apk/awedea/nyx-music-player/"
+
+[IconPackStudio]
+enabled = false
+apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
+
+[TickTick]
+enabled = false
+apkmirror-dlurl = "https://www.apkmirror.com/apk/appest-inc/ticktick-to-do-list-with-reminder-day-planner/"
+
+[Tasker]
+enabled = false
+apkmirror-dlurl = "https://www.apkmirror.com/apk/joaomgcd/tasker/"
+
 version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
 
