--- a/config.toml
+++ b/config.toml
@@ -8,15 +8,16 @@ build-mindetach-module = true
 # add 'enabled = false' for not patching a specific app
 [YouTube]
 enabled = true
-build-mode = "both"                                                   # 'both', 'apk' or 'module'
-excluded-patches = "debugging"                                        # whitespace seperated list of patches to exclude (multiline strings are not supported)
-included-patches = ""                                                 # whitespace seperated list of patches to include
+build-mode = "module"                                                   # 'both', 'apk' or 'module'
+excluded-patches = "debugging swipe-controls seekbar-tapping downloads return-youtube-dislike premium-heading custom-branding always-autorepeat"                                        # whitespace seperated list of patches to exclude (multiline strings are not supported)
+included-patches = "hide-create-button hide-cast-button"                                                 # whitespace seperated list of patches to include
 version = "auto"                                                      # 'auto', 'latest' or a custom one like '17.40.41'
 exclusive-patches = false                                             # excludes all patches by default
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 module-prop-name = "ytrv-magisk"
 
 [Music-arm64]
+enabled = false
 build-mode = "both"
 app-name = "Music"
 excluded-patches = ""
@@ -27,6 +28,7 @@ module-prop-name = "ytmusicrv-magisk"
 arch = "arm64-v8a"
 
 [Music-arm]
+enabled = false
 build-mode = "both"
 app-name = "Music"
 excluded-patches = ""
@@ -43,6 +45,7 @@ version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/twitter-inc/twitter/"
 
 [Reddit]
+enabled = false
 build-mode = "apk"
 version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
