--- a/config.toml
+++ b/config.toml
@@ -41,7 +41,7 @@ rv-brand = "ReVanced Extended"
 build-mode = "module"
 excluded-patches = ""
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
-arch = "both"
+arch = "arm64-v8a"
 
 [Twitter]
 build-mode = "apk"
@@ -54,6 +54,7 @@ build-mode = "apk"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/twitch-interactive-inc/twitch/"
 
 [TikTok]
+included-patches = "downloads feed-filter hide-ads playback-speed settings show-seekbar"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
 
 [Reddit]
