--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ build-mode = "module"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
 
 [Music]
-build-mode = "both"
+build-mode = "module"
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.apps.youtube.music"
 apkmirror-arch = "arm64-v8a"
 
