--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ enable-magisk-update = true   # set this to false if you do not want to receive 
 
 [YouTube]
 build-mode = "module"                                                   # 'both', 'apk' or 'module'
-excluded-patches = "always-autorepeat custom-branding premium-heading swipe-controls"      # space-seperated patches to exclude (multiline strings are not supported)
+excluded-patches = ""      # space-seperated patches to exclude (multiline strings are not supported)
 included-patches = ""                                                 # space-seperated patches to include (non-excluded patches are included by default)
 version = "auto"                                                      # 'auto', 'latest', 'beta' or a custom one like '17.40.41'
 archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
