--- a/config.toml
+++ b/config.toml
@@ -17,8 +17,7 @@ apkmirror-dlurl = "https://apkmirror.com/apk/redditinc/reddit"
 patches-source = "anddea/revanced-patches"
 cli-source = "inotia00/revanced-cli"
 rv-brand = "ReVanced Extended"
-included-patches = "'Change version code' 'Custom branding name for Reddit'"
-patcher-args = "--legacy-options=options.json"
+included-patches = "'Change version code'"
 apkmirror-dpi = "120-640dpi"
 
 [Twitch]
@@ -47,6 +46,5 @@ uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 patches-source = "anddea/revanced-patches"
 cli-source = "inotia00/revanced-cli"
 rv-brand = "ReVanced Extended"
-included-patches = "'Change version code' 'Custom branding name for Spotify' 'Custom theme'"
-patcher-args = "--legacy-options=options.json"
+included-patches = "'Change version code' 'Custom theme'"
 arch = "arm64-v8a"
