--- a/config.toml
+++ b/config.toml
@@ -29,7 +29,7 @@ patches-source = "ReVanced/revanced-cli"
 integrations-source = "crimera/revanced-integrations"
 cli-source = "crimera/piko"
 rv-brand = "ReVanced ReVanced"
-patches-version = "4.6.0"
+patches-version = "v4.6.0"
 build-mode = "apk"
 dpi = "120-640dpi"
 version = "auto"
