--- a/config.toml
+++ b/config.toml
@@ -28,8 +28,7 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/x-corp/twitter"
 patches-source = "crimera/piko"
 integrations-source = "crimera/revanced-integrations"
 rv-brand = "crimera ReVanced"
-cli-source = "ReVanced/revanced-cli"
-cli-version = " v4.6.0"
+cli-source = "ReVanced/revanced-cli/releases/tag/v4.6.0"
 dpi = "120-640dpi"
 version = "auto"
 
