--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 enable-magisk-update = true
 parallel-jobs = 1
 # compression-level = 9
+remove-rv-integrations-checks = true
 
 [YouTube]
 enabled = false
