--- a/config.toml
+++ b/config.toml
@@ -18,8 +18,8 @@ apkmirror-dpi = "120-640dpi"
 patches-source = "anddea/revanced-patches"
 cli-source = "inotia00/revanced-cli"
 rv-brand = "ReVanced Extended"
-#included-patches = "'Change package name'"
-#patcher-args = "-e 'Change package name' -OpackageNameReddit=com.reddit"
+included-patches = "'Change package name'"
+patcher-args = "-e 'Change package name' -OpackageNameReddit=com.reddit.reddit"
 
 [Twitter]
 enabled = false
