--- a/config.toml
+++ b/config.toml
@@ -47,3 +47,4 @@ patches-source = "anddea/revanced-patches"
 cli-source = "inotia00/revanced-cli"
 rv-brand = "ReVanced Extended"
 included-patches = "'Custom theme' 'Change version code'"
+version = "auto"
